--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "grommet": "https://github.com/grommet/grommet/tarball/stable",
     "grommet-icons": "^4.5.0",
     "react": "^17.0.1",
+    "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
